--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
 	"name": "image-upload-api",
 	"version": "1.0.0",
+	"type": "module",
 	"description": "",
-	"main": "index.js",
+	"main": "server.mjs",
 	"scripts": {
-		"start": "node server.js",
+		"start": "nodemon server.mjs",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
@@ -12,7 +13,13 @@
 	"license": "ISC",
 	"dependencies": {
 		"cors": "^2.8.5",
+		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"firebase": "^10.3.1",
+		"firebase-admin": "^11.10.1",
 		"multer": "^1.4.5-lts.1"
+	},
+	"devDependencies": {
+		"nodemon": "^3.0.1"
 	}
 }
